release: bump to 0.11.0 — support Minecraft 1.20.1+ (Java 17)
Lower the baseline from Java 21 / Paper 1.20.5+ back to Java 17 / Paper 1.20.1
so a single JAR runs on 1.20.1–1.20.4 (Java 17) and 1.20.5+ (Java 21), up to
the latest release.

- pom: compile to Java 17 (--release), build against paper-api 1.20.1
- replace Java 21 List.getFirst()/getLast() with index access
- release workflow: build Modrinth game_versions dynamically (1.20+), static fallback
- docs: README/Modrinth/BlackMinecraft compatibility -> 1.20.1+, Java 17+
- issue templates: refresh version and supported-versions line
- add EN Modrinth and RU BlackMinecraft descriptions